force-app/main/default/objects/Ventas_Mostrador__c/Ventas_Mostrador__c.object-meta.xml
<CustomObject>
    <label>Ventas Mostrador</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Venta Mostrador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventas Mostradores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>