force-app/main/default/objects/Ventas_Mostrador__c/fields/Calle__c.field-meta.xml
<CustomField>
    <fullName>Calle__c</fullName>
    <description>Calle de la dirección del cliente</description>
    <formula>Cliente__r.POCH_Calle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calle de la dirección del cliente</inlineHelpText>
    <label>Calle</label>
    <type>Text</type>
</CustomField>