force-app/main/default/objects/Ventas_Mostrador__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ventas Mostradores</relationshipLabel>
    <relationshipName>Ventas_Mostradores</relationshipName>
    <type>Lookup</type>
</CustomField>