force-app/main/default/objects/Ventas_Mostrador__c/fields/Cliente_SAP__c.field-meta.xml
<CustomField>
    <fullName>Cliente_SAP__c</fullName>
    <description>Campo que nos indicará cliente SAP</description>
    <formula>Cliente__r.POCH_IDClienteSAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo que nos indicará cliente SAP</inlineHelpText>
    <label>Cliente SAP</label>
    <type>Text</type>
</CustomField>