force-app/main/default/objects/Ventas_Mostrador__c/fields/Condicion_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Condicion_de_Pago__c</fullName>
    <label>Condición de Pago</label>
    <length>100</length>
    <type>Text</type>
</CustomField>