force-app/main/default/objects/Ventas_Mostrador__c/fields/CP__c.field-meta.xml
<CustomField>
    <fullName>CP__c</fullName>
    <description>Codigo Postal de la dirección del cliente</description>
    <formula>Cliente__r.POCH_CodigoPostal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Codigo Postal de la dirección del cliente</inlineHelpText>
    <label>CP</label>
    <type>Text</type>
</CustomField>