force-app/main/default/objects/Ventas_Mostrador__c/fields/Credito_disponible__c.field-meta.xml
<CustomField>
    <fullName>Credito_disponible__c</fullName>
    <label>Línea de crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>