force-app/main/default/objects/Ventas_Mostrador__c/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>