force-app/main/default/objects/Ventas_Mostrador__c/fields/Dia_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Dia_de_pago__c</fullName>
    <label>Dia de pago</label>
    <type>Date</type>
</CustomField>