force-app/main/default/objects/Ventas_Mostrador__c/fields/Digitos_tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Digitos_tarjeta__c</fullName>
    <label>Ult. 4 Dígitos</label>
    <length>4</length>
    <type>Text</type>
</CustomField>