force-app/main/default/objects/Ventas_Mostrador__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Correo Electronico del cliente</description>
    <inlineHelpText>Correo Electronico del cliente</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>