force-app/main/default/objects/Ventas_Mostrador__c/fields/Enviado_SAP__c.field-meta.xml
<CustomField>
    <fullName>Enviado_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado SAP</label>
    <type>Checkbox</type>
</CustomField>