force-app/main/default/objects/Ventas_Mostrador__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado de la dirección del cliente</description>
    <formula>Cliente__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estado de la dirección del cliente</inlineHelpText>
    <label>Estado</label>
    <type>Text</type>
</CustomField>