force-app/main/default/objects/Ventas_Mostrador__c/fields/Id_cliente_SAP__c.field-meta.xml
<CustomField>
    <fullName>Id_cliente_SAP__c</fullName>
    <formula>Cliente__r.POCH_IDClienteSAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id cliente SAP</label>
    <type>Text</type>
</CustomField>