force-app/main/default/objects/Ventas_Mostrador__c/fields/Id_Registro_SAP__c.field-meta.xml
<CustomField>
    <fullName>Id_Registro_SAP__c</fullName>
    <externalId>true</externalId>
    <label>Numero de pedido SAP</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>