force-app/main/default/objects/Ventas_Mostrador__c/fields/Importe_2__c.field-meta.xml
<CustomField>
    <fullName>Importe_2__c</fullName>
    <description>Importe de la da forma de pago</description>
    <inlineHelpText>Importe de la 2da forma de pago</inlineHelpText>
    <label>Importe 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>