force-app/main/default/objects/Ventas_Mostrador__c/fields/Importe_3__c.field-meta.xml
<CustomField>
    <fullName>Importe_3__c</fullName>
    <description>Importe de la 3era forma de pago</description>
    <inlineHelpText>Importe de la 3era forma de pago</inlineHelpText>
    <label>Importe 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>