force-app/main/default/objects/Ventas_Mostrador__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <description>Importe de la 1er forma de pago</description>
    <inlineHelpText>Importe de la 1er forma de pago</inlineHelpText>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>