force-app/main/default/objects/Ventas_Mostrador__c/fields/Metodo_de_Pago3__c.field-meta.xml
<CustomField>
    <fullName>Metodo_de_Pago3__c</fullName>
    <description>3era forma de pago</description>
    <inlineHelpText>3era forma de pago</inlineHelpText>
    <label>Método de Pago 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Metodo_de_Pago</valueSetName>
    </valueSet>
</CustomField>