force-app/main/default/objects/Ventas_Mostrador__c/fields/Name_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Name_Cliente__c</fullName>
    <description>Nombre del cliente</description>
    <formula>Cliente__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nombre del cliente</inlineHelpText>
    <label>Nombre del Cliente</label>
    <type>Text</type>
</CustomField>