force-app/main/default/objects/Ventas_Mostrador__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <description>Número de la calle del cliente</description>
    <formula>Cliente__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Número que conforma la dirección del cliente</inlineHelpText>
    <label>Número</label>
    <type>Text</type>
</CustomField>