force-app/main/default/objects/Ventas_Mostrador__c/fields/Obs_Pago_2__c.field-meta.xml
<CustomField>
    <fullName>Obs_Pago_2__c</fullName>
    <description>Observaciones de la 2da forma de pago</description>
    <inlineHelpText>Observaciones de la 2da forma de pago</inlineHelpText>
    <label>Obs. Pago 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>