force-app/main/default/objects/Ventas_Mostrador__c/fields/Obs_Pago_3__c.field-meta.xml
<CustomField>
    <fullName>Obs_Pago_3__c</fullName>
    <description>Observaciones de la 3era forma de pago</description>
    <inlineHelpText>Observaciones de la 3era forma de pago</inlineHelpText>
    <label>Obs. Pago 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>