force-app/main/default/objects/Ventas_Mostrador__c/fields/Obs_Pago__c.field-meta.xml
<CustomField>
    <fullName>Obs_Pago__c</fullName>
    <description>Observaciones de la 1er forma de pago</description>
    <inlineHelpText>Observaciones de la 1er forma de pago</inlineHelpText>
    <label>Obs. Pago</label>
    <length>50</length>
    <type>Text</type>
</CustomField>