force-app/main/default/objects/Ventas_Mostrador__c/fields/Oficina_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Oficina_de_Venta__c</fullName>
    <label>Oficina de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Oficina_Ventas</valueSetName>
    </valueSet>
</CustomField>