force-app/main/default/objects/Ventas_Mostrador__c/fields/OrganizacionVentas__c.field-meta.xml
<CustomField>
    <fullName>OrganizacionVentas__c</fullName>
    <label>Organización de Ventas</label>
    <length>4</length>
    <type>Text</type>
</CustomField>