force-app/main/default/objects/Ventas_Mostrador__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>País de la dirección del cliente</description>
    <formula>Cliente__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>País de la dirección del cliente</inlineHelpText>
    <label>País</label>
    <type>Text</type>
</CustomField>