force-app/main/default/objects/Ventas_Mostrador__c/fields/Poblacion__c.field-meta.xml
<CustomField>
    <fullName>Poblacion__c</fullName>
    <description>Ciudad de la dirección del cliente</description>
    <formula>Cliente__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ciudad de la dirección del cliente</inlineHelpText>
    <label>Población</label>
    <type>Text</type>
</CustomField>