force-app/main/default/objects/Ventas_Mostrador__c/fields/POCH_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>POCH_Sucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sucursal</label>
    <referenceTo>POCH_Sucursal__c</referenceTo>
    <relationshipLabel>Ventas Mostradores</relationshipLabel>
    <relationshipName>Ventas_Mostradores</relationshipName>
    <type>Lookup</type>
</CustomField>