force-app/main/default/objects/Ventas_Mostrador__c/fields/Precio_total__c.field-meta.xml
<CustomField>
    <fullName>Precio_total__c</fullName>
    <label>Precio total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>