force-app/main/default/objects/Ventas_Mostrador__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <description>RFC de la dirección del cliente</description>
    <formula>Cliente__r.POCH_RFC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>No de identificacion fiscal del cliente</inlineHelpText>
    <label>RFC</label>
    <type>Text</type>
</CustomField>