force-app/main/default/objects/Ventas_Mostrador__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
                <label>En Proceso</label>
            </value>
            <value>
                <fullName>Liberado a SAP</fullName>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Validación Crédito</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Con remisión</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Facturado</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Anulado</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Embarcado</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Entregado</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>No Entregado</label>
            </value>
            <value>
                <fullName>RC</fullName>
                <label>Rechazado por Cliente</label>
            </value>
            <value>
                <fullName>NC</fullName>
                <label>Nota de Crédito</label>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>