force-app/main/default/objects/Ventas_Mostrador__c/fields/Uso_de_CFDI__c.field-meta.xml
<CustomField>
    <fullName>Uso_de_CFDI__c</fullName>
    <label>Uso de CFDI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Uso_de_CFDI</valueSetName>
    </valueSet>
</CustomField>