force-app/main/default/objects/Ventas_Mostrador__c/fields/Valor_Neto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Neto__c</fullName>
    <description>Importe de venta de la posición</description>
    <inlineHelpText>Valor de (Cantidad*UM venta ) - Descuento</inlineHelpText>
    <label>Valor Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>