force-app/main/default/objects/Ventas_Mostrador__c/fields/Via_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Via_de_pago__c</fullName>
    <description>Metodo de pago de Facturacion</description>
    <inlineHelpText>Metodo de pago de Facturacion</inlineHelpText>
    <label>Vía de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Via_de_pago</valueSetName>
    </valueSet>
</CustomField>