force-app/main/default/objects/Ventas_Mostrador__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <formula>TEXT(POCH_Sucursal__r.Zona__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zona</label>
    <type>Text</type>
</CustomField>