force-app/main/default/objects/Ventas_Mostrador__c/validationRules/Cambiar_estatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambiar_estatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Status__c ),
NOT(OR(ISPICKVAL(Status__c, &quot;Alta&quot;),
ISPICKVAL(Status__c, &quot;Liberado a SAP&quot;),
ISPICKVAL(Status__c, &quot;Cancelado&quot;))),
$Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;)</errorConditionFormula>
    <errorMessage>El estatus sera asignado por Sistema</errorMessage>
</ValidationRule>