force-app/main/default/objects/Ventas_Mostrador__c/listViews/Venta_mostrador_a_SAP.listView-meta.xml
<ListView>
    <fullName>Venta_mostrador_a_SAP</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Id_Registro_SAP__c</columns>
    <columns>Fecha_de_Factura__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enviado_SAP__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Id_Registro_SAP__c</field>
        <operation>equals</operation>
    </filters>
    <label>Venta mostrador a SAP</label>
</ListView>